chore: 명세서 동기화 & 테스트용 API 추가
