# src/routes/homes.routes.js
@@ -7,7 +7,5 @@ const controller = new HomeController();
 
 // 인증 필요한 라우트
 router.get('/', authenticate, controller.getHome);
-router.get('/expert-summary/:answerId', authenticate, controller.getDoctorAnswerSummary);
-router.get('/expert-answers/:answerId', authenticate, controller.getDoctorAnswerDetail);
 
 export default router;
